@@ -3,6 +3,11 @@ package org.folio.bulkops.util;
 import static java.util.Objects.isNull;
 import static java.util.Objects.nonNull;
 
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.stream.Collectors;
 import lombok.experimental.UtilityClass;
 import org.folio.bulkops.domain.dto.Action;
 import org.folio.bulkops.domain.dto.BulkOperationRule;
@@ -11,15 +16,10 @@ import org.folio.bulkops.domain.dto.Parameter;
 import org.folio.bulkops.domain.dto.UpdateOptionType;
 import org.folio.spring.FolioExecutionContext;
 
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.stream.Collectors;
-
 @UtilityClass
 public class RuleUtils {
-  public static Optional<BulkOperationRule> findRuleByOption(BulkOperationRuleCollection rules, UpdateOptionType option) {
+  public static Optional<BulkOperationRule> findRuleByOption(BulkOperationRuleCollection rules,
+                                                             UpdateOptionType option) {
     return rules.getBulkOperationRules().stream()
       .filter(rule -> option.equals(rule.getRuleDetails().getOption()))
       .findFirst();
@@ -30,15 +30,19 @@ public class RuleUtils {
       .map(Action::getParameters)
       .filter(Objects::nonNull)
       .flatMap(List::stream)
-      .collect(Collectors.toMap(Parameter::getKey, Parameter::getValue, (existing, replacement) -> existing));
+      .collect(Collectors.toMap(Parameter::getKey, Parameter::getValue, (
+              existing, replacement) -> existing));
   }
 
-  public static String getTenantFromAction(Action action, FolioExecutionContext folioExecutionContext) {
+  public static String getTenantFromAction(Action action,
+                                           FolioExecutionContext folioExecutionContext) {
     var actionTenants = action.getTenants();
     var updatedTenants = action.getUpdatedTenants();
-    if ((isNull(actionTenants) || actionTenants.isEmpty()) && (isNull(updatedTenants) || updatedTenants.isEmpty())) {
+    if ((isNull(actionTenants) || actionTenants.isEmpty())
+            && (isNull(updatedTenants) || updatedTenants.isEmpty())) {
       return folioExecutionContext.getTenantId();
     }
-    return nonNull(actionTenants) && !actionTenants.isEmpty() ? actionTenants.get(0) : updatedTenants.get(0);
+    return nonNull(actionTenants) && !actionTenants.isEmpty() ? actionTenants.getFirst()
+            : updatedTenants.getFirst();
   }
 }
