@@ -12,6 +12,12 @@ import static org.mockito.Mockito.when;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ObjectNode;
+import java.io.File;
+import java.util.Collections;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.UUID;
 import lombok.SneakyThrows;
 import org.folio.bulkops.batch.jobs.processidentifiers.DuplicationCheckerFactory;
 import org.folio.bulkops.client.InstanceClient;
@@ -35,12 +41,6 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.batch.core.JobExecution;
 import org.springframework.test.util.ReflectionTestUtils;
-import java.io.File;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
-import java.util.UUID;
 
 class BulkEditInstanceProcessorTest {
 
@@ -70,12 +70,14 @@ class BulkEditInstanceProcessorTest {
   void setUp() {
     MockitoAnnotations.openMocks(this);
     processor = new BulkEditInstanceProcessor(
-      instanceClient, folioExecutionContext, permissionsValidator, userClient, duplicationCheckerFactory, srsService);
+            instanceClient, folioExecutionContext, permissionsValidator, userClient,
+            duplicationCheckerFactory, srsService);
     ReflectionTestUtils.setField(processor, "identifierType", IdentifierType.ID.getValue());
     ReflectionTestUtils.setField(processor, "jobExecution", jobExecution);
     when(folioExecutionContext.getTenantId()).thenReturn("tenant");
     when(folioExecutionContext.getUserId()).thenReturn(UUID.randomUUID());
-    when(duplicationCheckerFactory.getIdentifiersToCheckDuplication(any())).thenReturn(new HashSet<>());
+    when(duplicationCheckerFactory.getIdentifiersToCheckDuplication(any()))
+            .thenReturn(new HashSet<>());
     when(duplicationCheckerFactory.getFetchedIds(any())).thenReturn(new HashSet<>());
   }
 
@@ -84,13 +86,15 @@ class BulkEditInstanceProcessorTest {
     ItemIdentifier identifier = new ItemIdentifier().withItemId("111");
     Instance instance = Instance.builder().id("id1").source("FOLIO").title("Sample title").build();
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1)
+                    .build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE)))
+            .thenReturn(true);
 
     List<ExtendedInstance> result = processor.process(identifier);
 
     assertThat(result).hasSize(1);
-    assertThat(result.get(0).getEntity().getSource()).isEqualTo("FOLIO");
+    assertThat(result.getFirst().getEntity().getSource()).isEqualTo("FOLIO");
   }
 
   @Test
@@ -99,86 +103,100 @@ class BulkEditInstanceProcessorTest {
     ReflectionTestUtils.setField(processor, "identifierType", IdentifierType.ID.getValue());
     ItemIdentifier identifier = new ItemIdentifier().withItemId("222");
     String instanceId = "id2";
-    Instance instance = Instance.builder().id(instanceId).source("MARC").title("Sample title").build();
+    Instance instance = Instance.builder().id(instanceId).source("MARC").title("Sample title")
+            .build();
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1)
+                    .build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE)))
+            .thenReturn(true);
 
-    var srsJson = objectMapper.readTree(new File("src/test/resources/files/srs_response_for_validator.json"));
+    var srsJson = objectMapper.readTree(
+            new File("src/test/resources/files/srs_response_for_validator.json"));
     when(srsClient.getMarc(instanceId, "INSTANCE", true)).thenReturn(srsJson);
 
-    when(jobExecution.getExecutionContext()).thenReturn(new org.springframework.batch.item.ExecutionContext());
+    when(jobExecution.getExecutionContext()).thenReturn(
+            new org.springframework.batch.item.ExecutionContext());
 
     List<ExtendedInstance> result = processor.process(identifier);
 
     assertThat(result).hasSize(1);
-    assertThat(result.get(0).getEntity().getSource()).isEqualTo("MARC");
+    assertThat(result.getFirst().getEntity().getSource()).isEqualTo("MARC");
   }
 
   @Test
   void shouldThrowWhenSrsIsMissingForMarc() {
-    ItemIdentifier identifier = new ItemIdentifier().withItemId("333");
     String instanceId = "id3";
-    Instance instance = Instance.builder().id(instanceId).source("MARC").title("Sample title").build();
+    Instance instance = Instance.builder().id(instanceId).source("MARC").title("Sample title")
+            .build();
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(
+                    List.of(instance)).totalRecords(1).build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(),
+            eq(EntityType.INSTANCE))).thenReturn(true);
 
     ObjectNode srsJson = objectMapper.createObjectNode();
     srsJson.set("sourceRecords", objectMapper.createArrayNode());
     when(srsClient.getMarc(instanceId, "INSTANCE", true)).thenReturn(srsJson);
 
-    when(jobExecution.getExecutionContext()).thenReturn(new org.springframework.batch.item.ExecutionContext());
-
+    when(jobExecution.getExecutionContext()).thenReturn(
+            new org.springframework.batch.item.ExecutionContext());
+    ItemIdentifier identifier = new ItemIdentifier().withItemId("333");
     assertThatThrownBy(() -> processor.process(identifier))
-      .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining(SRS_MISSING);
+      .isInstanceOf(BulkEditException.class).hasMessageContaining(SRS_MISSING);
   }
 
   @Test
   void shouldThrowWhenMultipleSrsForMarc() {
-    ItemIdentifier identifier = new ItemIdentifier().withItemId("444");
     String instanceId = "id4";
-    Instance instance = Instance.builder().id(instanceId).source("MARC").title("Sample title").build();
+    Instance instance = Instance.builder().id(instanceId).source("MARC").title("Sample title")
+            .build();
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1)
+                    .build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE)))
+            .thenReturn(true);
 
     ObjectNode srsJson = objectMapper.createObjectNode();
     srsJson.set("sourceRecords", objectMapper.createArrayNode()
-      .add(objectMapper.createObjectNode().put("recordId", "rec1"))
-      .add(objectMapper.createObjectNode().put("recordId", "rec2")));
+            .add(objectMapper.createObjectNode().put("recordId", "rec1"))
+            .add(objectMapper.createObjectNode().put("recordId", "rec2")));
     when(srsClient.getMarc(instanceId, "INSTANCE", true)).thenReturn(srsJson);
 
-    when(jobExecution.getExecutionContext()).thenReturn(new org.springframework.batch.item.ExecutionContext());
-
+    when(jobExecution.getExecutionContext())
+            .thenReturn(new org.springframework.batch.item.ExecutionContext());
+    ItemIdentifier identifier = new ItemIdentifier().withItemId("444");
     assertThatThrownBy(() -> processor.process(identifier))
-      .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining("Multiple SRS records");
+      .isInstanceOf(BulkEditException.class).hasMessageContaining("Multiple SRS records");
   }
 
   @Test
   void shouldThrowWhenSourceIsLinkedData() {
     ItemIdentifier identifier = new ItemIdentifier().withItemId("555");
-    Instance instance = Instance.builder().id("id5").source("LINKED_DATA").title("Sample title").build();
+    Instance instance = Instance.builder().id("id5").source("LINKED_DATA").title("Sample title")
+            .build();
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(List.of(instance)).totalRecords(1)
+                    .build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(),
+            eq(EntityType.INSTANCE))).thenReturn(true);
 
     assertThatThrownBy(() -> processor.process(identifier))
       .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining(LINKED_DATA_SOURCE_IS_NOT_SUPPORTED);
+            .hasMessageContaining(LINKED_DATA_SOURCE_IS_NOT_SUPPORTED);
   }
 
   @Test
   void shouldThrowWhenNoPermission() {
     ItemIdentifier identifier = new ItemIdentifier().withItemId("666");
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(false);
-    when(userClient.getUserById(anyString())).thenReturn(new org.folio.bulkops.domain.bean.User().withUsername("testuser"));
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE)))
+            .thenReturn(false);
+    when(userClient.getUserById(anyString())).thenReturn(new org.folio.bulkops.domain.bean.User()
+            .withUsername("testuser"));
 
     assertThatThrownBy(() -> processor.process(identifier))
       .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining("does not have required permission");
+            .hasMessageContaining("does not have required permission");
   }
 
   @Test
@@ -187,11 +205,12 @@ class BulkEditInstanceProcessorTest {
     Set<ItemIdentifier> set = new HashSet<>();
     set.add(identifier);
     when(duplicationCheckerFactory.getIdentifiersToCheckDuplication(any())).thenReturn(set);
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(),
+            eq(EntityType.INSTANCE))).thenReturn(true);
 
     assertThatThrownBy(() -> processor.process(identifier))
       .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining("Duplicate entry");
+            .hasMessageContaining("Duplicate entry");
   }
 
   @Test
@@ -200,23 +219,25 @@ class BulkEditInstanceProcessorTest {
     Instance i1 = Instance.builder().id("id1").source("FOLIO").build();
     Instance i2 = Instance.builder().id("id2").source("FOLIO").build();
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(List.of(i1, i2)).totalRecords(2).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(List.of(i1, i2))
+                    .totalRecords(2).build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE)))
+            .thenReturn(true);
 
     assertThatThrownBy(() -> processor.process(identifier))
-      .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining("Multiple matches");
+      .isInstanceOf(BulkEditException.class).hasMessageContaining("Multiple matches");
   }
 
   @Test
   void shouldThrowOnNoMatchFound() {
     ItemIdentifier identifier = new ItemIdentifier().withItemId("999");
     when(instanceClient.getInstanceByQuery(anyString(), anyLong()))
-      .thenReturn(InstanceCollection.builder().instances(Collections.emptyList()).totalRecords(0).build());
-    when(permissionsValidator.isBulkEditReadPermissionExists(anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
+            .thenReturn(InstanceCollection.builder().instances(Collections.emptyList())
+                    .totalRecords(0).build());
+    when(permissionsValidator.isBulkEditReadPermissionExists(
+            anyString(), eq(EntityType.INSTANCE))).thenReturn(true);
 
     assertThatThrownBy(() -> processor.process(identifier))
-      .isInstanceOf(BulkEditException.class)
-      .hasMessageContaining("No match found");
+      .isInstanceOf(BulkEditException.class).hasMessageContaining("No match found");
   }
 }
