@@ -13,6 +13,10 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
+import java.util.UUID;
 import org.folio.bulkops.BaseTest;
 import org.folio.bulkops.client.DataImportClient;
 import org.folio.bulkops.client.MetadataProviderClient;
@@ -35,17 +39,12 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
-import java.util.UUID;
-
 class MetadataProviderServiceTest extends BaseTest {
-   @MockitoBean
+  @MockitoBean
   DataImportClient dataImportClient;
-   @MockitoBean
+  @MockitoBean
   private MetadataProviderClient metadataProviderClient;
-   @MockitoBean
+  @MockitoBean
   private ErrorService errorService;
 
   @Autowired
@@ -58,41 +57,44 @@ class MetadataProviderServiceTest extends BaseTest {
     var compositeChildId = UUID.randomUUID();
     var parentSingleId = UUID.randomUUID();
     var executions = new DataImportJobExecutionCollection()
-      .jobExecutions(List.of(new DataImportJobExecution()
-        .id(compositeChildId)
-        .subordinationType(DataImportJobExecution.SubordinationTypeEnum.COMPOSITE_PARENT),
-        new DataImportJobExecution()
-          .id(compositeChildId)
-          .jobProfileInfo(new ProfileInfo().id(jobProfileId))
-          .subordinationType(DataImportJobExecution.SubordinationTypeEnum.COMPOSITE_CHILD),
-        new DataImportJobExecution()
-          .id(parentSingleId)
-          .jobProfileInfo(new ProfileInfo().id(jobProfileId))
-          .subordinationType(DataImportJobExecution.SubordinationTypeEnum.PARENT_SINGLE)))
-        .totalRecords(3);
+            .jobExecutions(List.of(new DataImportJobExecution()
+                            .id(compositeChildId)
+                            .subordinationType(
+                                    DataImportJobExecution.SubordinationTypeEnum.COMPOSITE_PARENT),
+                    new DataImportJobExecution()
+                            .id(compositeChildId)
+                            .jobProfileInfo(new ProfileInfo().id(jobProfileId))
+                            .subordinationType(
+                                    DataImportJobExecution.SubordinationTypeEnum.COMPOSITE_CHILD),
+                    new DataImportJobExecution()
+                            .id(parentSingleId)
+                            .jobProfileInfo(new ProfileInfo().id(jobProfileId))
+                            .subordinationType(
+                                    DataImportJobExecution.SubordinationTypeEnum.PARENT_SINGLE)))
+            .totalRecords(3);
 
     when(dataImportClient.getSplitStatus())
-      .thenReturn(SplitStatus.builder().splitStatus(splitStatusEnabled).build());
+            .thenReturn(SplitStatus.builder().splitStatus(splitStatusEnabled).build());
     when(metadataProviderClient.getJobExecutionsByJobProfileId(jobProfileId, Integer.MAX_VALUE))
-      .thenReturn(executions);
+            .thenReturn(executions);
 
     var res = metadataProviderService.getJobExecutions(jobProfileId);
 
     if (splitStatusEnabled) {
       assertThat(res).hasSize(1);
-      assertThat(res.get(0).getId()).isEqualTo(compositeChildId);
+      assertThat(res.getFirst().getId()).isEqualTo(compositeChildId);
     } else {
       assertThat(res).hasSize(1);
-      assertThat(res.get(0).getId()).isEqualTo(parentSingleId);
+      assertThat(res.getFirst().getId()).isEqualTo(parentSingleId);
     }
   }
 
   @Test
   void shouldReturnDataImportJobCompletionWhenAllExecutionsCompleted() {
     var jobExecutions = List.of(
-      new DataImportJobExecution().status(DataImportStatus.COMMITTED).totalJobParts(3),
-      new DataImportJobExecution().status(DataImportStatus.CANCELLED),
-      new DataImportJobExecution().status(DataImportStatus.ERROR)
+            new DataImportJobExecution().status(DataImportStatus.COMMITTED).totalJobParts(3),
+            new DataImportJobExecution().status(DataImportStatus.CANCELLED),
+            new DataImportJobExecution().status(DataImportStatus.ERROR)
     );
 
     assertTrue(metadataProviderService.isDataImportJobCompleted(jobExecutions));
@@ -101,9 +103,9 @@ class MetadataProviderServiceTest extends BaseTest {
   @Test
   void shouldReturnDataImportJobIncompleteWhenSomeExecutionsNotCompleted() {
     var jobExecutions = List.of(
-      new DataImportJobExecution().status(DataImportStatus.COMMITTED),
-      new DataImportJobExecution().status(DataImportStatus.CANCELLED),
-      new DataImportJobExecution().status(DataImportStatus.PARSING_IN_PROGRESS)
+            new DataImportJobExecution().status(DataImportStatus.COMMITTED),
+            new DataImportJobExecution().status(DataImportStatus.CANCELLED),
+            new DataImportJobExecution().status(DataImportStatus.PARSING_IN_PROGRESS)
     );
 
     assertFalse(metadataProviderService.isDataImportJobCompleted(jobExecutions));
@@ -119,8 +121,8 @@ class MetadataProviderServiceTest extends BaseTest {
   @Test
   void shouldCalculateProgress() {
     var jobExecutions = List.of(
-      new DataImportJobExecution().progress(new DataImportProgress().current(10).total(100)),
-      new DataImportJobExecution().progress(new DataImportProgress().current(10).total(100))
+            new DataImportJobExecution().progress(new DataImportProgress().current(10).total(100)),
+            new DataImportJobExecution().progress(new DataImportProgress().current(10).total(100))
     );
 
     var progress = metadataProviderService.calculateProgress(jobExecutions);
@@ -134,30 +136,30 @@ class MetadataProviderServiceTest extends BaseTest {
     var updatedId1 = UUID.randomUUID().toString();
     var updatedId2 = UUID.randomUUID().toString();
     var logEntries = List.of(
-      JobLogEntry.builder()
-        .sourceRecordActionStatus(UPDATED)
-        .relatedInstanceInfo(RelatedInstanceInfo.builder()
-          .idList(List.of(updatedId1))
-          .build())
-        .build(),
-      JobLogEntry.builder()
-        .sourceRecordActionStatus(DISCARDED)
-        .relatedInstanceInfo(RelatedInstanceInfo.builder()
-          .idList(List.of(UUID.randomUUID().toString()))
-          .build())
-        .build(),
-      JobLogEntry.builder()
-        .sourceRecordActionStatus(UPDATED)
-        .relatedInstanceInfo(RelatedInstanceInfo.builder()
-          .idList(List.of(updatedId2))
-          .build())
-        .build(),
-      JobLogEntry.builder()
-        .sourceRecordActionStatus(DISCARDED)
-        .relatedInstanceInfo(RelatedInstanceInfo.builder()
-          .idList(List.of(UUID.randomUUID().toString()))
-          .build())
-        .build());
+            JobLogEntry.builder()
+                    .sourceRecordActionStatus(UPDATED)
+                    .relatedInstanceInfo(RelatedInstanceInfo.builder()
+                            .idList(List.of(updatedId1))
+                            .build())
+                    .build(),
+            JobLogEntry.builder()
+                    .sourceRecordActionStatus(DISCARDED)
+                    .relatedInstanceInfo(RelatedInstanceInfo.builder()
+                            .idList(List.of(UUID.randomUUID().toString()))
+                            .build())
+                    .build(),
+            JobLogEntry.builder()
+                    .sourceRecordActionStatus(UPDATED)
+                    .relatedInstanceInfo(RelatedInstanceInfo.builder()
+                            .idList(List.of(updatedId2))
+                            .build())
+                    .build(),
+            JobLogEntry.builder()
+                    .sourceRecordActionStatus(DISCARDED)
+                    .relatedInstanceInfo(RelatedInstanceInfo.builder()
+                            .idList(List.of(UUID.randomUUID().toString()))
+                            .build())
+                    .build());
 
     var ids = metadataProviderService.fetchUpdatedInstanceIds(logEntries);
 
@@ -168,55 +170,58 @@ class MetadataProviderServiceTest extends BaseTest {
 
   @Test
   void shouldRetrieveDataImportJobLogEntriesInChunks() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var dataImportJobId = UUID.randomUUID();
 
       when(metadataProviderClient.getJobLogEntries(dataImportJobId.toString(), 1))
-        .thenReturn(JobLogEntryCollection.builder()
-          .entries(Collections.emptyList())
-          .totalRecords(9)
-          .build())
-        .thenReturn(JobLogEntryCollection.builder()
-          .entries(Collections.emptyList())
-          .totalRecords(10)
-          .build());
+              .thenReturn(JobLogEntryCollection.builder()
+                      .entries(Collections.emptyList())
+                      .totalRecords(9)
+                      .build())
+              .thenReturn(JobLogEntryCollection.builder()
+                      .entries(Collections.emptyList())
+                      .totalRecords(10)
+                      .build());
       var threeEntriesCollection = JobLogEntryCollection.builder()
-        .entries(List.of(
-          JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build(),
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(DISCARDED)
-            .error("error")
-            .relatedInstanceInfo(RelatedInstanceInfo.builder()
-              .hridList(List.of("123"))
-              .build())
-            .build(),
-          JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build()
-        ))
-        .totalRecords(10)
-        .build();
+              .entries(List.of(
+                      JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build(),
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(DISCARDED)
+                              .error("error")
+                              .relatedInstanceInfo(RelatedInstanceInfo.builder()
+                                      .hridList(List.of("123"))
+                                      .build())
+                              .build(),
+                      JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build()
+              ))
+              .totalRecords(10)
+              .build();
       var singleEntryCollection = JobLogEntryCollection.builder()
-        .entries(Collections.singletonList(JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build()))
-        .totalRecords(10)
-        .build();
-      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(), anyLong()))
-        .thenAnswer(invocation -> {
-          var offset = (Long) invocation.getArguments()[1];
-          return switch (offset.intValue()) {
-            case 0, 3, 6 -> threeEntriesCollection;
-            case 9 -> singleEntryCollection;
-            default -> throw new IllegalStateException("Unexpected value: " + offset);
-          };
-        });
+              .entries(Collections.singletonList(JobLogEntry.builder()
+                      .sourceRecordActionStatus(UPDATED).build()))
+              .totalRecords(10)
+              .build();
+      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(),
+              anyLong()))
+              .thenAnswer(invocation -> {
+                var offset = (Long) invocation.getArguments()[1];
+                return switch (offset.intValue()) {
+                  case 0, 3, 6 -> threeEntriesCollection;
+                  case 9 -> singleEntryCollection;
+                  default -> throw new IllegalStateException("Unexpected value: " + offset);
+                };
+              });
       var executions = Collections.singletonList(new DataImportJobExecution()
-        .id(dataImportJobId)
-        .progress(new DataImportProgress().current(10).total(10)));
+              .id(dataImportJobId)
+              .progress(new DataImportProgress().current(10).total(10)));
       var operation = new BulkOperation();
 
       var entries = metadataProviderService.getJobLogEntries(operation, executions);
 
       assertThat(entries).hasSize(10);
 
-      verify(metadataProviderClient, times(2)).getJobLogEntries(dataImportJobId.toString(), 1);
+      verify(metadataProviderClient, times(2))
+              .getJobLogEntries(dataImportJobId.toString(), 1);
 
       verify(metadataProviderClient).getJobLogEntries(dataImportJobId.toString(), 0, 3);
       verify(metadataProviderClient).getJobLogEntries(dataImportJobId.toString(), 3, 3);
@@ -227,48 +232,50 @@ class MetadataProviderServiceTest extends BaseTest {
 
   @Test
   void shouldSaveErrorAndCompleteRetrievingJobLogEntriesWhenChunkFails() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var dataImportJobId = UUID.randomUUID();
       var operationId = UUID.randomUUID();
 
       when(metadataProviderClient.getJobLogEntries(dataImportJobId.toString(), 1))
-        .thenReturn(JobLogEntryCollection.builder()
-          .entries(Collections.emptyList())
-          .totalRecords(10)
-          .build());
+              .thenReturn(JobLogEntryCollection.builder()
+                      .entries(Collections.emptyList())
+                      .totalRecords(10)
+                      .build());
 
       var threeEntriesCollection = JobLogEntryCollection.builder()
-        .entries(List.of(
-          JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build(),
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(DISCARDED)
-            .error("error")
-            .relatedInstanceInfo(RelatedInstanceInfo.builder()
-              .hridList(List.of("123"))
-              .build())
-            .build(),
-          JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build()
-        ))
-        .totalRecords(10)
-        .build();
+              .entries(List.of(
+                      JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build(),
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(DISCARDED)
+                              .error("error")
+                              .relatedInstanceInfo(RelatedInstanceInfo.builder()
+                                      .hridList(List.of("123"))
+                                      .build())
+                              .build(),
+                      JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build()
+              ))
+              .totalRecords(10)
+              .build();
       var singleEntryCollection = JobLogEntryCollection.builder()
-        .entries(Collections.singletonList(JobLogEntry.builder().sourceRecordActionStatus(UPDATED).build()))
-        .totalRecords(10)
-        .build();
-      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(), anyLong()))
-        .thenAnswer(invocation -> {
-          var offset = (Long) invocation.getArguments()[1];
-          return switch (offset.intValue()) {
-            case 0, 6 -> threeEntriesCollection;
-            case 3 -> throw new NotFoundException("Log entries were not found");
-            case 9 -> singleEntryCollection;
-            default -> throw new IllegalStateException("Unexpected offset value: " + offset);
-          };
-        });
+              .entries(Collections.singletonList(JobLogEntry.builder()
+                      .sourceRecordActionStatus(UPDATED).build()))
+              .totalRecords(10)
+              .build();
+      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(),
+              anyLong()))
+              .thenAnswer(invocation -> {
+                var offset = (Long) invocation.getArguments()[1];
+                return switch (offset.intValue()) {
+                  case 0, 6 -> threeEntriesCollection;
+                  case 3 -> throw new NotFoundException("Log entries were not found");
+                  case 9 -> singleEntryCollection;
+                  default -> throw new IllegalStateException("Unexpected offset value: " + offset);
+                };
+              });
 
       var executions = Collections.singletonList(new DataImportJobExecution()
-        .id(dataImportJobId)
-        .progress(new DataImportProgress().current(10).total(10)));
+              .id(dataImportJobId)
+              .progress(new DataImportProgress().current(10).total(10)));
       var operation = BulkOperation.builder().id(operationId).build();
 
       var entries = metadataProviderService.getJobLogEntries(operation, executions);
@@ -280,52 +287,55 @@ class MetadataProviderServiceTest extends BaseTest {
       verify(metadataProviderClient).getJobLogEntries(dataImportJobId.toString(), 6, 3);
       verify(metadataProviderClient).getJobLogEntries(dataImportJobId.toString(), 9, 3);
 
-      var expectedMessage = MSG_FAILED_TO_GET_LOG_ENTRIES_CHUNK.formatted(3, "Log entries were not found");
+      var expectedMessage = MSG_FAILED_TO_GET_LOG_ENTRIES_CHUNK.formatted(3,
+              "Log entries were not found");
       verify(errorService).saveError(operationId, EMPTY, expectedMessage, ErrorType.ERROR);
     }
   }
 
   @Test
   void shouldRetryGetEntriesWhenNullStatusesArePresent() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var dataImportJobId = UUID.randomUUID();
 
       when(metadataProviderClient.getJobLogEntries(dataImportJobId.toString(), 1))
-        .thenReturn(JobLogEntryCollection.builder()
-          .entries(Collections.emptyList())
-          .totalRecords(2)
-          .build());
+              .thenReturn(JobLogEntryCollection.builder()
+                      .entries(Collections.emptyList())
+                      .totalRecords(2)
+                      .build());
       var entriesContainingNullStatus = JobLogEntryCollection.builder()
-        .entries(List.of(
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(UPDATED)
-            .build(),
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(null)
-            .build()))
-        .totalRecords(2)
-        .build();
+              .entries(List.of(
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(UPDATED)
+                              .build(),
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(null)
+                              .build()))
+              .totalRecords(2)
+              .build();
       var entriesWithoutNullStatus = JobLogEntryCollection.builder()
-        .entries(List.of(
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(UPDATED)
-            .build(),
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(DISCARDED)
-            .build()))
-        .totalRecords(2)
-        .build();
-      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(), anyLong()))
-        .thenReturn(entriesContainingNullStatus)
-        .thenReturn(entriesWithoutNullStatus);
+              .entries(List.of(
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(UPDATED)
+                              .build(),
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(DISCARDED)
+                              .build()))
+              .totalRecords(2)
+              .build();
+      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(),
+              anyLong()))
+              .thenReturn(entriesContainingNullStatus)
+              .thenReturn(entriesWithoutNullStatus);
       var executions = Collections.singletonList(new DataImportJobExecution()
-        .id(dataImportJobId)
-        .progress(new DataImportProgress().current(2).total(2)));
+              .id(dataImportJobId)
+              .progress(new DataImportProgress().current(2).total(2)));
       var operation = new BulkOperation();
 
       var entries = metadataProviderService.getJobLogEntries(operation, executions);
 
-      verify(metadataProviderClient, times(2)).getJobLogEntries(dataImportJobId.toString(), 0, 3);
+      verify(metadataProviderClient, times(2))
+              .getJobLogEntries(dataImportJobId.toString(), 0, 3);
       assertThat(entries).hasSize(2);
       assertThat(entries).noneMatch(entry -> entry.getSourceRecordActionStatus() == null);
     }
@@ -333,34 +343,36 @@ class MetadataProviderServiceTest extends BaseTest {
 
   @Test
   void shouldReturnEntriesWithNullStatusesWhenRetryCountWasExceeded() {
-    try (var context =  new FolioExecutionContextSetter(folioExecutionContext)) {
+    try (var context = new FolioExecutionContextSetter(folioExecutionContext)) {
       var dataImportJobId = UUID.randomUUID();
 
       when(metadataProviderClient.getJobLogEntries(dataImportJobId.toString(), 1))
-        .thenReturn(JobLogEntryCollection.builder()
-          .entries(Collections.emptyList())
-          .totalRecords(2)
-          .build());
+              .thenReturn(JobLogEntryCollection.builder()
+                      .entries(Collections.emptyList())
+                      .totalRecords(2)
+                      .build());
       var entriesContainingNullStatus = JobLogEntryCollection.builder()
-        .entries(List.of(
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(UPDATED)
-            .build(),
-          JobLogEntry.builder()
-            .sourceRecordActionStatus(null)
-            .build()))
-        .totalRecords(2)
-        .build();
-      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(), anyLong()))
-        .thenReturn(entriesContainingNullStatus);
+              .entries(List.of(
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(UPDATED)
+                              .build(),
+                      JobLogEntry.builder()
+                              .sourceRecordActionStatus(null)
+                              .build()))
+              .totalRecords(2)
+              .build();
+      when(metadataProviderClient.getJobLogEntries(eq(dataImportJobId.toString()), anyLong(),
+              anyLong()))
+              .thenReturn(entriesContainingNullStatus);
       var executions = Collections.singletonList(new DataImportJobExecution()
-        .id(dataImportJobId)
-        .progress(new DataImportProgress().current(2).total(2)));
+              .id(dataImportJobId)
+              .progress(new DataImportProgress().current(2).total(2)));
       var operation = new BulkOperation();
 
       var entries = metadataProviderService.getJobLogEntries(operation, executions);
 
-      verify(metadataProviderClient, times(10)).getJobLogEntries(dataImportJobId.toString(), 0, 3);
+      verify(metadataProviderClient, times(10))
+              .getJobLogEntries(dataImportJobId.toString(), 0, 3);
       assertThat(entries).hasSize(2);
       assertThat(entries).anyMatch(entry -> entry.getSourceRecordActionStatus() == null);
     }
